--- a/diseño/index.html
+++ b/diseño/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap" rel="stylesheet">
+    <title>Sportit</title>
 </head>
 <body>
     <header>
@@ -17,7 +21,7 @@
                 <li>Community</li>
             </ul>
         </nav>
-        <button>Contact</button>
+        <button class="contact">Contact</button>
     </header>
     <main>
         <section class="banner">
@@ -25,12 +29,12 @@
             <article>
                 <h1>LIVE: Follow the Telcel Huawei Mexico Open 2022 for free</h1>
                 <p>The final Open of the 2022 World Padel Tour season is underway, don't miss out on any of the action!</p>
-                <button>Contact</button>
+                <button class="contact">Contact</button>
             </article>
         </section>
         <section class="contenedor1">
             <h2>What´s different between pros?</h2>
-            <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet consequat purus sit amet sodales. In faucibus ut nisi eu dignissim. Vestibulum fringilla velit sed tincidunt tincidunt.</article>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet consequat purus sit amet sodales. In faucibus ut nisi eu dignissim. Vestibulum fringilla velit sed tincidunt tincidunt.</p>
         </section>
         <section class="contenedor2">
             <article>
