puse footes y contenedores

--- a/diseño/index.html
+++ b/diseño/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img src="../imagenes/logo.svg" alt="logo">
+        <img class="logo" src="../imagenes/logo.svg" alt="logo">
         <nav>
             <ul>
                 <li>Sports</li>
@@ -38,21 +38,21 @@
         </section>
         <section class="contenedor2">
             <article>
-                <div>01</div>
+                <button>01</button>
                 <div>
                     <h4>Track company-wide progress</h4>
                     <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
                 </div>
             </article>
             <article>
-                <div>02</div>
+                <button>02</button>
                 <div>
                     <h4>Advance built-in reports</h4>
                     <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
                 </div>
             </article>
             <article>
-                <div>03</div>
+                <button>03</button>
                 <div>
                     <h4>Everything you need in one place</h4>
                     <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
@@ -84,9 +84,9 @@
         </section>
     </main>
     <footer>
-        <div>
-            <img src="../imagenes/logo.svg" alt="logo">
-            <div class="redesSociales">
+        <div class="redesSociales">
+            <img class="logo" src="../imagenes/logo2.svg" alt="logo">
+            <div class="imgRedesSociales">
                 <img src="../imagenes/icon-facebook.svg" alt="facebook">
                 <img src="../imagenes/icon-youtube.svg" alt="youtube">
                 <img src="../imagenes/icon-twitter.svg" alt="twiter">
@@ -94,18 +94,20 @@
                 <img src="../imagenes/icon-instagram.svg" alt="instagram">
             </div>
         </div>
-        <ul>
-            <li>Home</li>
-            <li>Pricing</li>
-            <li>Products</li>
-            <li>About Us</li>
-        </ul>
-        <ul>
-            <li>Trainning</li>
-            <li>Community</li>
-            <li>Privacy Policy</li>
-        </ul>
-        <div>
+        <div class="navegacion">
+            <ul>
+                <li>Home</li>
+                <li>Pricing</li>
+                <li>Products</li>
+                <li>About Us</li>
+            </ul>
+            <ul>
+                <li>Trainning</li>
+                <li>Community</li>
+                <li>Privacy Policy</li>
+            </ul>
+        </div>
+        <div class="buscador">
             <input type="text" placeholder="Update in your box">
             <button>Go</button>
         </div>
