Avanzando web mobile

--- a/diseño/index.html
+++ b/diseño/index.html
@@ -21,7 +21,8 @@
                 <li>Community</li>
             </ul>
         </nav>
-        <button class="contact">Contact</button>
+        <button class="boton">Contact</button>
+        <img class="hamburger" src="../imagenes/icon-hamburger.svg" alt="despliegue de opciones">
     </header>
     <main>
         <section class="banner">
@@ -29,7 +30,7 @@
             <article>
                 <h1>LIVE: Follow the Telcel Huawei Mexico Open 2022 for free</h1>
                 <p>The final Open of the 2022 World Padel Tour season is underway, don't miss out on any of the action!</p>
-                <button class="contact">Contact</button>
+                <button class="boton">Contact</button>
             </article>
         </section>
         <section class="contenedor1">
@@ -61,25 +62,27 @@
         </section>
         <section class="contenedor3">
             <h2>Best of the month</h2>
-            <article>
-                <img src="../imagenes/avatar-sanyo.png" alt="Avatar de Sanyo">
-                <h4>Sanyo</h4>
-                <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-            </article>
-            <article>
-                <img src="../imagenes/avatar.lebron.png" alt="Avatar de Lebron">
-                <h4>Lebron</h4>
-                <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-            </article>
-            <article>
-                <img src="../imagenes/avatar-navarro.png" alt="Avatar de Navarro">
-                <h4>Navarro</h4>
-                <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-            </article>
-            <button>More</button>
+            <div class="reseñas">
+                <article>
+                    <img src="../imagenes/avatar-sanyo.png" alt="Avatar de Sanyo">
+                    <h4>Sanyo</h4>
+                    <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+                </article>
+                <article>
+                    <img src="../imagenes/avatar.lebron.png" alt="Avatar de Lebron">
+                    <h4>Lebron</h4>
+                    <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+                </article>
+                <article>
+                    <img src="../imagenes/avatar-navarro.png" alt="Avatar de Navarro">
+                    <h4>Navarro</h4>
+                    <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+                </article>
+            </div>
+            <button class="boton">More</button>
         </section>
         <section class="contenedor4">
-            <h2>Get to know the best teams of the year</h2>
+            <h2>Get to know the <span>best</span> teams of the <span>year</span></h2>
             <button>Go for it</button>
         </section>
     </main>
