--- a/diseño/index.html
+++ b/diseño/index.html
@@ -39,25 +39,25 @@
         </section>
         <section class="contenedor2">
             <article>
-                <button>01</button>
                 <div>
+                    <button>01</button>
                     <h4>Track company-wide progress</h4>
-                    <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
-                </div>
+                </div>    
+                <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
             </article>
             <article>
-                <button>02</button>
                 <div>
+                    <button>02</button>
                     <h4>Advance built-in reports</h4>
-                    <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
                 </div>
+                <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
             </article>
             <article>
-                <button>03</button>
                 <div>
+                    <button>03</button>
                     <h4>Everything you need in one place</h4>
-                    <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
                 </div>
+                <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
             </article>
         </section>
         <section class="contenedor3">
@@ -110,10 +110,10 @@
                 <li>Privacy Policy</li>
             </ul>
         </div>
-        <div class="buscador">
-            <input type="text" placeholder="Update in your box">
+        <form class="buscador">
+            <input type="email" placeholder="Update in your box">
             <button>Go</button>
-        </div>
+        </form>
         <span class="copyright">Copyright 2020. All Rights Reserved</span>
     </footer>
 </body>
