landing terminada para la presentación

--- a/diseño/index.html
+++ b/diseño/index.html
@@ -14,11 +14,11 @@
         <img class="logo" src="../imagenes/logo.svg" alt="logo">
         <nav>
             <ul>
-                <li>Sports</li>
-                <li>Products</li>
-                <li>About Us</li>
-                <li>Trainning</li>
-                <li>Community</li>
+                <li><a href="#">Sports</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Trainning</a></li>
+                <li><a href="#">Community</a></li>
             </ul>
         </nav>
         <button class="boton">Contact</button>
@@ -90,11 +90,11 @@
         <div class="redesSociales">
             <img class="logo" src="../imagenes/logo2.svg" alt="logo">
             <div class="imgRedesSociales">
-                <img src="../imagenes/icon-facebook.svg" alt="facebook">
-                <img src="../imagenes/icon-youtube.svg" alt="youtube">
-                <img src="../imagenes/icon-twitter.svg" alt="twiter">
-                <img src="../imagenes/icon-pinterest.svg" alt="pinterest">
-                <img src="../imagenes/icon-instagram.svg" alt="instagram">
+                <a href="#"><img src="../imagenes/icon-facebook.svg" alt="facebook"></a>
+                <a href="#"><img src="../imagenes/icon-youtube.svg" alt="youtube"></a>
+                <a href="#"><img src="../imagenes/icon-twitter.svg" alt="twiter"></a>
+                <a href="#"><img src="../imagenes/icon-pinterest.svg" alt="pinterest"></a>
+                <a href="#"><img src="../imagenes/icon-instagram.svg" alt="instagram"></a>
             </div>
         </div>
         <div class="navegacion">
